cmake_minimum_required(VERSION 3.12)
project(mm C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(kasan)

add_executable(mm
        kasan/kasan.c
        kasan/kasan.h
        kasan/kasan_init.c
        kasan/quarantine.c
        kasan/report.c
        backing-dev.c
        balloon_compaction.c
        cleancache.c
        cma.c
        cma.h
        cma_debug.c
        compaction.c
        debug.c
        debug_page_ref.c
        dmapool.c
        early_ioremap.c
        fadvise.c
        failslab.c
        filemap.c
        frame_vector.c
        frontswap.c
        gup.c
        gup_benchmark.c
        highmem.c
        hmm.c
        huge_memory.c
        hugetlb.c
        hugetlb_cgroup.c
        hwpoison-inject.c
        init-mm.c
        internal.h
        interval_tree.c
        khugepaged.c
        kmemleak-test.c
        kmemleak.c
        ksm.c
        list_lru.c
        maccess.c
        madvise.c
        memblock.c
        memcontrol.c
        memfd.c
        memory-failure.c
        memory.c
        memory_hotplug.c
        mempolicy.c
        mempool.c
        memtest.c
        migrate.c
        mincore.c
        mlock.c
        mm_init.c
        mmap.c
        mmu_context.c
        mmu_gather.c
        mmu_notifier.c
        mmzone.c
        mprotect.c
        mremap.c
        msync.c
        nommu.c
        oom_kill.c
        page-writeback.c
        page_alloc.c
        page_counter.c
        page_ext.c
        page_idle.c
        page_io.c
        page_isolation.c
        page_owner.c
        page_poison.c
        page_vma_mapped.c
        pagewalk.c
        percpu-internal.h
        percpu-km.c
        percpu-stats.c
        percpu-vm.c
        percpu.c
        pgtable-generic.c
        process_vm_access.c
        quicklist.c
        readahead.c
        rmap.c
        rodata_test.c
        shmem.c
        slab.c
        slab.h
        slab_common.c
        slob.c
        slub.c
        sparse-vmemmap.c
        sparse.c
        swap.c
        swap_cgroup.c
        swap_slots.c
        swap_state.c
        swapfile.c
        truncate.c
        usercopy.c
        userfaultfd.c
        util.c
        vmacache.c
        vmalloc.c
        vmpressure.c
        vmscan.c
        vmstat.c
        workingset.c
        z3fold.c
        zbud.c
        zpool.c
        zsmalloc.c
        zswap.c)
